# eyeo-adblockplus-as-a-patch

./: DEPS
.github/workflows/: create-patch.yaml
base/trace_event/: builtin_categories.h
chrome/android/: BUILD.gn  chrome_common_shared_library.gni
chrome/app/: chrome_main_delegate.cc
chrome/browser/: BUILD.gn
chrome/browser/adblock/: adblock_content_browser_client.cc  adblock_content_browser_client.h  adblock_content_browser_client_browsertest.cc  adblock_content_browser_client_unittest.cc  adblock_controller_factory.cc  adblock_controller_factory.h  adblock_debug_url_browsertest.cc  adblock_filter_list_browsertest.cc  adblock_filtering_configurations_browsertest.cc  adblock_frame_hierarchy_builder_browsertest.cc  adblock_mojo_interface_impl.cc  adblock_mojo_interface_impl_unittest.cc  adblock_multiple_tabs_browsertests.cc  adblock_subscription_service_browsertest.cc  adblock_telemetry_service_browsertest.cc  adblock_telemetry_service_factory.cc  adblock_telemetry_service_factory.h  subscription_service_factory.cc  subscription_service_factory.h
chrome/browser/autocomplete/: chrome_autocomplete_provider_client.cc
chrome/browser/client_hints/: client_hints_browsertest.cc
chrome/browser/extensions/: BUILD.gn  browser_context_keyed_service_factories.cc
chrome/browser/net/: errorpage_browsertest.cc
chrome/browser/permissions/: notifications_engagement_service_unittest.cc
chrome/browser/preferences/: BUILD.gn
chrome/browser/prefs/: chrome_command_line_pref_store.cc  chrome_pref_service_factory.cc
chrome/browser/profiles/: chrome_browser_main_extra_parts_profiles.cc  profile_keyed_service_browsertest.cc
chrome/browser/safe_browsing/: safe_browsing_blocking_page_test.cc
chrome/browser/subresource_filter/: subresource_filter_browser_test_harness.cc
chrome/browser/ui/: BUILD.gn  tab_helpers.cc
chrome/common/: BUILD.gn  webui_url_constants.cc  webui_url_constants.h
chrome/test/: BUILD.gn
chrome/test/base/: chrome_test_launcher.cc  in_process_browser_test.cc
components/: BUILD.gn
components/adblock/: CHANGELOG.md  features.gni
components/adblock/android/: BUILD.gn  adblock_strings.grd
components/adblock/android/java/res/xml/: adblock_preferences.xml
components/adblock/android/java/src/org/chromium/components/adblock/: AdblockController.java  FilteringConfiguration.java  ResourceClassificationNotifier.java
components/adblock/android/java/src/org/chromium/components/adblock/settings/: AdblockAllowedDomainsFragment.java  AdblockCustomFilterListsFragment.java  AdblockFilterListsAdapter.java  AdblockSettingsFragment.java
components/adblock/android/javatests/src/org/chromium/components/adblock/: AdblockFilterFragmentTest.java  FilteringConfigurationTest.java  ResourceClassificationNotifierTest.java  TestAdBlockedObserver.java  TestPagesCircumventionTest.java  TestPagesCspTest.java  TestPagesElemhideEmuInvTest.java  TestPagesElemhideEmuTest.java  TestPagesElemhideTest.java  TestPagesExceptionTest.java  TestPagesFilterTest.java  TestPagesHeaderFilterTest.java  TestPagesRewriteTest.java  TestPagesSiteKeyTest.java  TestPagesSnippetsTest.java  TestPagesTestsHelper.java  TestPagesWebsocketTest.java  TestVerificationUtils.java
components/adblock/android/translations/: adblock_strings_ar.xtb  adblock_strings_de.xtb  adblock_strings_el.xtb  adblock_strings_en-GB.xtb  adblock_strings_es-419.xtb  adblock_strings_es.xtb  adblock_strings_fr-CA.xtb  adblock_strings_fr.xtb  adblock_strings_hu.xtb  adblock_strings_it.xtb  adblock_strings_ja.xtb  adblock_strings_ko.xtb  adblock_strings_nl.xtb  adblock_strings_pl.xtb  adblock_strings_pt-BR.xtb  adblock_strings_ru.xtb  adblock_strings_tr.xtb  adblock_strings_zh-CN.xtb
components/adblock/content/: BUILD.gn
components/adblock/content/common/: BUILD.gn  adblock_url_loader_factory.cc  adblock_url_loader_factory.h  adblock_url_loader_factory_for_test.cc  adblock_url_loader_factory_for_test.h
components/adblock/core/: BUILD.gn  activeping_telemetry_topic_provider.cc  activeping_telemetry_topic_provider.h  adblock_controller.h  adblock_controller_impl.cc  adblock_controller_impl.h  adblock_controller_legacy_impl.cc  adblock_controller_legacy_impl.h  adblock_switches.cc  adblock_switches.h  adblock_telemetry_service.cc  adblock_telemetry_service.h  session_stats.h
components/adblock/core/configuration/: BUILD.gn  fake_filtering_configuration.cc  fake_filtering_configuration.h  filtering_configuration.h  persistent_filtering_configuration.cc  persistent_filtering_configuration.h  persistent_filtering_configuration_test.cc
components/adblock/core/configuration/test/: fake_filtering_configuration.cc  mock_filtering_configuration.h
components/adblock/core/converter/: BUILD.gn  converter.cc  converter_main.cc  converter_standalone.cc  flatbuffer_converter.cc  metadata.cc  metadata.h
components/adblock/core/converter/parser/: BUILD.gn  content_filter.cc  content_filter.h  domain_option.cc  domain_option.h  filter_classifier.cc  filter_classifier.h  metadata.cc  snippet_filter.cc  snippet_filter.h  snippet_tokenizer.cc  snippet_tokenizer.h  url_filter.cc  url_filter_options.cc  url_filter_options.h
components/adblock/core/converter/parser/test/: content_filter_test.cc  domain_option_test.cc  snippet_tokenizer_test.cc  url_filter_test.cc
components/adblock/core/converter/serializer/: BUILD.gn  filter_keyword_extractor.cc  filter_keyword_extractor.h  flatbuffer_serializer.cc  flatbuffer_serializer.h
components/adblock/core/converter/test/: converter_test.cc  flatbuffer_converter_perftest.cc  flatbuffer_converter_test.cc
components/adblock/docs/: design-overview.md  integration-how-to.md
components/adblock_comparison/: BUILD.gn  libadblockplus_reference_database.cc  libadblockplus_reference_database.h  verify_flatbuffer_adblocking.cc
components/resources/: BUILD.gn  adblock_resources.grdp  components_resources.grd
content/renderer/: render_frame_impl.h
extensions/browser/: extension_event_histogram_value.h  extension_function_histogram_value.h
net/url_request/: redirect_info.cc  redirect_info.h
(+191 files in other folders)
