# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.


import("//build/config/android/rules.gni")
import("//build/config/locales.gni")
import("//tools/grit/grit_rule.gni")

android_library("adblock_java") {
  sources = [
    "java/src/org/chromium/components/adblock/AdblockComposeFilterSuggestionsCallback.java",
    "java/src/org/chromium/components/adblock/AdblockContentType.java",
    "java/src/org/chromium/components/adblock/AdblockController.java",
    "java/src/org/chromium/components/adblock/AdblockCounters.java",
    "java/src/org/chromium/components/adblock/AdblockElement.java",
    "java/src/org/chromium/components/adblock/FilteringConfiguration.java",
    "java/src/org/chromium/components/adblock/ResourceClassificationNotifier.java",
  ]

  ### Android UI patch start
  sources += [
    "java/src/org/chromium/components/adblock/settings/AdblockAllowedDomainsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockCustomFilterListsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockCustomFiltersFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockCustomItemFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockFilterListsAdapter.java",
    "java/src/org/chromium/components/adblock/settings/AdblockFilterListsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockMoreOptionsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockSettingsFragment.java",
  ]
### Android UI patch end

  deps = [
    ":java_resources",
    ":jni_headers",
    "//base:base_java",
    "//base:jni_java",
    "//build/android:build_java",
    "//chrome/browser/preferences:java",
    "//chrome/browser/profiles/android:java",
    "//components/browser_ui/settings/android:java",
    "//components/prefs/android:java",
    "//components/user_prefs/android:java",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//third_party/androidx:androidx_fragment_fragment_java",
    "//third_party/androidx:androidx_preference_preference_java",
  ]

  annotation_processor_deps = [ "//base/android/jni_generator:jni_processor" ]
  resources_package = "org.chromium.components.adblock"
}

generate_jni("jni_headers") {
  sources = [
    "java/src/org/chromium/components/adblock/AdblockComposeFilterSuggestionsCallback.java",
    "java/src/org/chromium/components/adblock/AdblockController.java",
    "java/src/org/chromium/components/adblock/AdblockElement.java",
    "java/src/org/chromium/components/adblock/FilteringConfiguration.java",
    "java/src/org/chromium/components/adblock/ResourceClassificationNotifier.java",
  ]
}

android_resources("java_resources") {
  sources = [
    "java/res/values/adblock_settings_locales_titles.xml",
  ]
### Android UI patch start
  sources += [     
    "java/res/drawable-hdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-hdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-mdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-mdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-hdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-hdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-mdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-mdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-xhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-xhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-xxhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-xxhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-xhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-xhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-xxhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-xxhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/layout/adblock_custom_item.xml",
    "java/res/layout/adblock_custom_item_settings.xml",
    "java/res/layout/adblock_filter_lists_list_item.xml",
    "java/res/xml/adblock_more_options.xml",
    "java/res/xml/adblock_preferences.xml",
  ]

  deps = [ ":adblock_strings_grd" ]
### Android UI patch end
}

android_library("adblock_java_tests") {
  testonly = true

  sources = [
    "javatests/src/org/chromium/components/adblock/AdblockControllerTest.java",
    "javatests/src/org/chromium/components/adblock/AdblockPopupInfoBarTest.java",
    "javatests/src/org/chromium/components/adblock/AdblockPopupMessageTest.java",
    "javatests/src/org/chromium/components/adblock/FilteringConfigurationTest.java",
    "javatests/src/org/chromium/components/adblock/ResourceClassificationNotifierTest.java",
    "javatests/src/org/chromium/components/adblock/TestAdBlockedObserver.java",
    "javatests/src/org/chromium/components/adblock/TestPagesCircumventionTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesCspTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesElemhideEmuInvTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesElemhideEmuTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesElemhideTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesExceptionTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesFilterTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesHeaderFilterTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesRewriteTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesSiteKeyTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesSnippetsTest.java",
    "javatests/src/org/chromium/components/adblock/TestPagesTestsHelper.java",
    "javatests/src/org/chromium/components/adblock/TestPagesWebsocketTest.java",
  ]

  ### Android UI patch start
  sources += [
        "javatests/src/org/chromium/components/adblock/AdblockFilterFragmentTest.java",
  ]
  ### Android UI patch end

  deps = [
    ":adblock_java",
    "//base:base_java",
    "//base:base_java_test_support",
    "//chrome/android:chrome_java",
    "//chrome/browser/flags:java",
    "//chrome/browser/settings:test_support_java",
    "//chrome/browser/tab:java",
    "//chrome/browser/tabmodel:java",
    "//chrome/test/android:chrome_java_integration_test_support",
    "//chrome/test/android:chrome_java_test_support_common",
    "//components/infobars/android:java",
    "//components/infobars/core:infobar_enums_java",
    "//components/messages/android/test:test_support_java",
    "//content/public/android:content_full_java",
    "//content/public/android:content_main_dex_java",
    "//content/public/test/android:content_java_test_support",
    "//net/android:net_java_test_support",
    "//third_party/android_support_test_runner:runner_java",
    "//third_party/androidx:androidx_test_runner_java",
    "//third_party/hamcrest:hamcrest_library_java",
    "//third_party/junit:junit",
  ]
}
### Android UI patch start
java_strings_grd("adblock_strings_grd") {
  grd_file = "adblock_strings.grd"
  outputs = [ "values/adblock_strings.xml" ] +
            process_file_template(
                android_bundle_locales_as_resources,
                [ "values-{{source_name_part}}/adblock_strings.xml" ])
}
### Android UI patch end
